Fix overlap in unit info UI

--- a/css/main.less
+++ b/css/main.less
@@ -2950,6 +2950,7 @@ ul, ol
 .menu-unit-info
 {
   display: flex;
+  flex: 1 0 auto;
   flex-flow: column;
   margin-bottom: 5px;
 }
